--- a/index.html
+++ b/index.html
@@ -1,49 +1,87 @@
-Privacy Policy
 
-Anu Akshu built the Guess Tamil Movie Quiz app as a free app. This SERVICE is provided by Anu Akshu at no cost and is intended for use as is.
-
-This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decides to use my Service.
-
-If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
-
-The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Guess Tamil Movie Quiz unless otherwise defined in this Privacy Policy.
-
-Information Collection and Use
-For a better experience, while using our Service, I may require you to provide certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.
-
-The app does use third-party services that may collect information used to identify you.
-
-Log Data
-I want to inform you that whenever you use my Service, in the case of an error in the app, I collect data and information (through third-party products) on your device called Log Data. This Log Data may include information such as your device Internet Protocol (“IP”) address, device name, operating system version, the configuration of the app when utilizing my Service, the time and date of your use of the Service, and other statistics.
-
-Cookies
-Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. These are sent to your browser from the websites that you visit and are stored on your device's internal memory.
-
-This Service does not use these “cookies” explicitly. However, the app may use third-party code and libraries that use “cookies” to collect information and improve their services. You have the option to either accept or refuse these cookies and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.
-
-Service Providers
-I may employ third-party companies and individuals due to the following reasons:
-
-To facilitate our Service;
-To provide the Service on our behalf;
-To perform Service-related services; or
-To assist us in analyzing how our Service is used.
-I want to inform users of this Service that these third parties have access to their Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.
-
-Security
-I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
-
-Links to Other Sites
-This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by me. Therefore, I strongly advise you to review the Privacy Policy of these websites. I have no control over and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.
-
-Children’s Privacy
-These Services do not address anyone under the age of 13. I do not knowingly collect personally identifiable information from children under 13 years of age. In the case I discover that a child under 13 has provided me with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact me so that I will be able to do the necessary actions.
-
-Changes to This Privacy Policy
-I may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. I will notify you of any changes by posting the new Privacy Policy on this page.
-
-This policy is effective as of [insert the date].
-
-Contact Us
-If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact me at v.anuakshaya@gmail.com.
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Privacy Policy</h1>
+    </header>
+    <main>
+        <section>
+            <p><strong>Last Updated:</strong> [Insert Date]</p>
+            <p>
+                <strong>Developer:</strong> Anu Akshu built the <em>Guess Tamil Movie Quiz</em> app as a free app. 
+                This SERVICE is provided by Anu Akshu at no cost and is intended for use as is.
+            </p>
+        </section>
+        <section>
+            <h2>Information Collection and Use</h2>
+            <p>
+                For a better experience, while using our Service, we may require you to provide certain 
+                personally identifiable information. The information that we request will be retained on your 
+                device and is not collected by us in any way.
+            </p>
+<!--             <p>The app uses third-party services that may collect information used to identify you:</p>
+            <ul>
+                <li><a href="https://policies.google.com/privacy" target="_blank">Google Play Services</a></li>
+                <li><a href="https://support.google.com/admob/answer/6128543?hl=en" target="_blank">AdMob</a></li>
+                <li><a href="https://firebase.google.com/policies/analytics" target="_blank">Google Analytics for Firebase</a></li>
+            </ul> -->
+        </section>
+        <section>
+            <h2>Log Data</h2>
+            <p>
+                We want to inform you that whenever you use our Service, in the case of an error in the app, 
+                we collect data and information (through third-party products) on your device called Log Data.
+            </p>
+        </section>
+        <section>
+            <h2>Cookies</h2>
+            <p>
+                Cookies are files with a small amount of data that are commonly used as anonymous unique identifiers. 
+                This Service does not use these “cookies” explicitly.
+            </p>
+        </section>
+        <section>
+            <h2>Service Providers</h2>
+            <p>
+                We may employ third-party companies and individuals to:
+            </p>
+            <ul>
+                <li>Facilitate our Service;</li>
+                <li>Provide the Service on our behalf;</li>
+                <li>Assist in analyzing how our Service is used.</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Security</h2>
+            <p>
+                We value your trust in providing us your Personal Information, thus we are striving to use 
+                commercially acceptable means of protecting it.
+            </p>
+        </section>
+        <section>
+            <h2>Children's Privacy</h2>
+            <p>
+                These Services do not address anyone under the age of 13. We do not knowingly collect personally 
+                identifiable information from children under 13 years of age.
+            </p>
+        </section>
+        <section>
+            <h2>Changes to This Privacy Policy</h2>
+            <p>
+                We may update our Privacy Policy from time to time. You are advised to review this page periodically for any changes.
+            </p>
+        </section>
+        <footer>
+            <h2>Contact Us</h2>
+            <p>If you have any questions, contact us at: <a href="mailto:v.anuakshaya@gmail.com">v.anuakshaya@gmail.com</a></p>
+        </footer>
+    </main>
+</body>
+</html>
