--- a/index.html
+++ b/index.html
@@ -13,10 +13,19 @@
     </header>
     <main>
         <section>
-            <p><strong>Last Updated:</strong> [Insert Date]</p>
+            <p><strong>Last Updated:</strong> 05-12-2024</p>
             <p>
                 <strong>Developer:</strong> Anu Akshu built the <em>Guess Tamil Movie Quiz</em> app as a free app. 
                 This SERVICE is provided by Anu Akshu at no cost and is intended for use as is.
+            </p>
+            <p> 
+            This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decides to use my Service.
+
+If you choose to use my Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that I collect is used for providing and improving the Service. I will not use or share your information with anyone except as described in this Privacy Policy.
+
+The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which are accessible at Guess Tamil Movie Quiz unless otherwise defined in this Privacy Policy.
+
+
             </p>
         </section>
         <section>
@@ -61,8 +70,7 @@
         <section>
             <h2>Security</h2>
             <p>
-                We value your trust in providing us your Personal Information, thus we are striving to use 
-                commercially acceptable means of protecting it.
+               I value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and I cannot guarantee its absolute security.
             </p>
         </section>
         <section>
